06/10/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.7.0 'Black Dow':
	- Cygwin sockets fixes.

06/06/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.3 'Black Dow':
	- DONT-FRAGMENT flag removed on UDP listening (clients-facing) sockets.
	- UDP fix for Cygwin only: UDP channels work fine now.
	- docs fixes.
	
06/06/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.2 'Black Dow':
	- Just cosmetic re-packaging for Debian, tarball warnings removed.
	
06/05/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.1 'Black Dow':
	- Peer permissions bug fixed.
	
06/03/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.0 'Black Dow':
	- Optimization.
	- Mac OS X compilation fixes.
	
06/01/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.4 'Black Dow':
	- Issues 29 and 30 fixed (channels padding).
	- minor fixes.
	- Mac OS X compilation fixes.
	- Cygwin-related compilation fixes and INSTALL additions.

05/31/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.3 'Black Dow':
	- REST API extra script example and docs extention.
	
05/26/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.1 'Black Dow':
	- Config file parsing fixed (Issue 28)

05/20/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Erik Johnston <erikj@openmarket.com> 
Version 1.8.5.0 'Black Dow':
	- IP access control lists.
	- log file name fix.
	- alt-* ports default behavior changed. 
	- "passive TCP" option in uclient.
	
05/18/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.5 'Black Dow':
	- socket conditions cleaned (SIGPIPE, etc)

05/17/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.4 'Black Dow':
	- configuration and installation adjusted for:
		- NetBSD;
		- Solaris;
		- OpenBSD;
	- Screen messages fixed;
	- code security fixes.

05/15/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.3 'Black Dow':
	- Compilation warning removed.
	- Log file fixed (Issue 26)
	
05/15/2013 Oleg Moskalenko <mom040267@gmail.com>