@@ -187,3 +187,5 @@ to see the man page.
 	Erik Johnston <erikj@openmarket.com>
 
 	Roman Lisagor <roman@demonware.net>
+	
+	Vladimir Tsanev <tsachev@gmail.com>
