@@ -1,6 +1,8 @@
-06/10/2013 Oleg Moskalenko <mom040267@gmail.com> 
+06/10/2013 Oleg Moskalenko <mom040267@gmail.com>,
+			Vladimir Tsanev <tsachev@gmail.com> 
 Version 1.8.7.0 'Black Dow':
 	- Cygwin sockets fixes.
+	- Makefile and configure script fixes.
 
 06/06/2013 Oleg Moskalenko <mom040267@gmail.com> 
 Version 1.8.6.3 'Black Dow':
